ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stratio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: stratio.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stratio-service 
            port:
              number: 80
